16 May 2016: Wouter
	- zone parser parses type AVC (it has TXT format).

25 April 2016: Wouter
	- 4.1.16 release tag.
	- trunk contains 4.1.17 in development.

11 April 2016: Wouter
	- 4.1.16 rc1 tag for release.
	- minor manpage fix.

5 April 2016: Wouter
	- Patch for expire state in multi-master when masters includes
	  broken master.

27 March 2016: Wouter
	- Fix 1243: Option to make NSD emit really minimal responses,
	  minimal-responses: yes in nsd.conf.
	- but they give additional information for priming queries (type NS).

6 March 2016: Wouter
	- Fix 1228: OpenSSL include is not guarded with HAVE_SSL

28 February 2016: Wouter
	- Printout serial error with hint it may be too big.

20 February 2016: Wouter
	- Fix missing _t to _type conversion for disable-radix-tree option.

15 February 2016: Wouter
	- zone parser can parse acronyms for algorithms ED25519 and ED448.

13 February 2016: Wouter
	- Calculate new udb index after growing the array, fix from
	  Chaofeng Liu.

7 February 2016: Wouter
	- tag for 4.1.15 rc1.  Which became 4.1.15 on 16 Feb.  Trunk 4.1.16.

19 January 2016: Wouter
	- Fix to rename _t typedefs because POSIX reserves them.

3 January 2016: Wouter
	- Fix #1195: Fix so that NSD fails on non-compliant values for Serial.

14 December 2016: Wouter
	- Squelch zone transfer error address family not supported by protocol
	  at low verbosity levels.

13 December 2016: Wouter
	- Fix nsd-control and ipv6 only.

8 December 2016: Wouter
	- tag 4.1.14
	- trunk contains 4.1.15 in development.

1 December 2016: Wouter
	- Fix restart of zone transfers when new config becomes available.
	- tag 4.1.14rc1

25 October 2016: Wouter
	- Fix #1132 for SERVFAIL zones perform backoff, and remembers the
	  timeout on next startup.
	- Save backoff timeout into xfrd.state file, this file has a higher
	  version number now.  Old files are skipped silently (causes
	  refresh) and created as new files upon exit.